[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["SauthO <shuta0698@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
langchain = "^0.2.15"
langchain-openai = "^0.1.23"
duckduckgo-search = "^6.2.11"
wikipedia = "^1.4.0"
langchain-community = "^0.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
